--- a/Blogengine/Dockerfile
+++ b/Blogengine/Dockerfile
@@ -6,4 +6,4 @@ RUN pip3 install -r requirements.txt
 ENV PYTHONUNBUFFERED=1
 
 COPY . .
-CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000", "--insecure"]
